# FaceEngine

./: .gitignore  CMakeLists.txt
include/FaceEngine/: AudioDevice.h  Colour.h  ContentLoader.h  Display.h  Exception.h  Game.h  GameDraw.h  GameUpdate.h  GraphicsDevice.h  Inputs.h  Math.h  OAL.h  OGL.h  Resolution.h  Resource.h  ResourceManager.h  Shader.h  SpriteBatcher.h  Texture2D.h  TextureFont.h  TypingSession.h  Window.h
include/FaceEngine/Game/: GameDraw.h  GameUpdate.h
include/FaceEngine/Graphics/: Colour.h  Shader.h  SpriteBatcher.h  Texture2D.h  TextureFont.h
include/FaceEngine/Math/: Calculator.h  Circle.h  Colour.h  Matrix.h  Matrix3f.h  Matrix4f.h  Quadrilateral.h  Ray.h  Rectangle.h  Vector.h  Vector2.h  Vector2f.h  Vector3.h  Vector3f.h  Vector4.h  Vector4f.h
include/KHR/: khrplatform.h
include/glad/: glad.h
src/: AudioDevice.cpp  Colour.cpp  ContentLoader.cpp  GLAD.cpp  Game.cpp  GameUpdate.cpp  GraphicsDevice.cpp  Matrix.cpp  Resolution.cpp  Resource.cpp  ResourceManager.cpp  Shader.cpp  SpriteBatcher.cpp  Texture2D.cpp  TextureFont.cpp  TypingSession.cpp  Vector.cpp  Window.cpp
src/Graphics/: Colour.cpp  Shader.cpp  SpriteBatcher.cpp  Texture2D.cpp  TextureFont.cpp
src/Math/: Calculator.cpp  Circle.cpp  Colour.cpp  Matrix.cpp  Matrix3f.cpp  Matrix4f.cpp  Ray.cpp  Rectangle.cpp  Vector.cpp  Vector2f.cpp  Vector3f.cpp  Vector4f.cpp
tests/: MathTests.cpp  TestMain.cpp
